# fastapi-redis-service

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
app/: __init__.py
app/configuration/: __init__.py  events.py
app/internal/repository/: __init__.py
app/internal/repository/redis/: __init__.py  connection.py  redis.py
app/internal/routes/: __init__.py  data.py
app/internal/services/: __init__.py  data.py
app/pkg/connectors/: __init__.py  redis.py
app/pkg/logger/: logger.py
app/pkg/models/: __init__.py  data.py
app/pkg/models/base/: exception.py  model.py
app/pkg/models/exceptions/: data.py
app/pkg/models/types/: fastapi.py
app/pkg/settings/: settings.py
