[tool.poetry]
name = "test-task-lexicom"
version = "0.1.0"
description = ""
authors = ["newoks"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pydantic = {extras = ["dotenv", "email"], version = "^1.9.0"}
dependency-injector = "^4.40.0"
redis = "^4.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

